--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-#my 
+#my
 models/
 screenshot/
 textures/
@@ -165,10 +165,7 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 
-.vscode/
 
-# Local History for Visual Studio Code
-.history/
-
-# Built Visual Studio Code Extensions
-*.vsix
+*.xml
+__pycache__/*
+.idea/*
